--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=async-logger
 
 # MySQL DB
-spring.datasource.url=jdbc:mysql://localhost:3306/log_db
+
+spring.datasource.url=jdbc:mysql://localhost:3306/log_db?rewriteBatchedStatements=true
 spring.datasource.username=root
 spring.datasource.password=0000
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
